# graph

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix  generate_graph.py  input.txt  output.txt  treefmt.nix
kernels/: graph_orientation_bridge.h  graph_orientation_ffi.h
kernels/K/: bridge_k.c  graph_orientation.k
kernels/futhark/: graph_orientation_futhark  graph_orientation_futhark.c  graph_orientation_futhark.fut  graph_orientation_futhark.h  graph_orientation_futhark.json
kernels/idris2/: GraphOrientation.idr  bridge_idris2.c  build_local.sh  graph_orientation.ipkg  idris_bridge.c  idris_bridge.h
kernels/idris2/src/: GraphOrientation.idr  GraphOrientationFFI.idr  GraphOrientationFFIBridge.idr  GraphOrientationFast.idr  Main.idr  Test.idr
kernels/zig/: graph_orientation_zig.zig
misc/: generate_graph.py
src/: lib.rs
